--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/08/09</b><br>Number of person: <b>72</b><br>Name, gender, age: <b>N.N. (17 women; 55 men)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died at sea after 23 days spent travelling from Libya to Lampedusa (IT), bodies thrown overboard</b><br>Source: CDS/GE/FE/MUGAK/AFP/GARA/ANSA/NouvelObs<br>
+Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Monica Maiamba Bungo (w, 27)</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
 
 <br>
 
