--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/01/08</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N. (1 woman, ±23; 8 men)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after boat capsized near beach in Cádiz (ES)</b><br>Source: EP/MUGAK/APDHA/PICUM/NOB<br>
+Found dead: <b>10/02/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>stabbed to death on train from Hamburg to Bremen (DE), asylum seeker</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
