--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/02/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned while travelling to Spain, found near Bolonia (ES)</b><br>Source: DiarioVasco<br>
+Found dead: <b>Jan 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 3)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>died of injuries after a cooker fell on him at Rondeslottet asylum centre (NO)</b><br>Source: Aftenposten<br>
 
 <br>
 
