--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Emmanuel Chidi Namdi (man, 35)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>died in street attack by football hooligans who had been racially abusing his wife in Fermo (IT), was seeking asylum</b><br>Source: AP/NBC/NigeriaToday/QZ<br>
+Found dead: <b>18/09/15</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (1 child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat to Europe sank off coast of Libya</b><br>Source: Euronews<br>
 
 <br>
 
