--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/11/00</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>reportedly drowned in the Sava River on Croatian-Bosnian border when small boat capsized</b><br>Source: MNS<br>
+Found dead: <b>24/12/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 2)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>drowned trying to swim ashore when boat sank near coast of Corfu (GR)</b><br>Source: MNS/AP<br>
 
 <br>
 
