--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>May 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moshen Sliti (41)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>died of heart attack in detention centre in Arenc (FR) after delay in medical care</b><br>Source: MNS/IRR/EUMC<br>
+Found dead: <b>16/08/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Meet Singh Kapoor (man, 40)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>body found among stowaways in shipping container at Tilbury Docks (GB); 34 survived</b><br>Source: GuardianUn./AP/Telegraph/ MNS<br>
 
 <br>
 
