--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/03/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>stabbed to death on highway outside Calais (FR)</b><br>Source: CMS<br>
+Found dead: <b>20/12/17</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>shot by Turkish border guards near Diriyah (SY) while trying to cross Syrian-Turkish border</b><br>Source: HRW/IOM<br>
 
 <br>
 
