--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>died of dehydration, found on boat sailing from Mauritania to Canary Islands (ES)</b><br>Source: APDHA<br>
+Found dead: <b>13/04/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (pregnant woman)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of exhaustion on rescue boat carrying 144 people from capsized vessel going from Libya to Italy</b><br>Source: taz<br>
 
 <br>
 
