--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/01/03</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of hypopthermia on Greek boat headed to Italy</b><br>Source: IRR/Vita<br>
+Found dead: <b>11/12/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>went missing after small boat capsized in the Strait of Gibraltar near Cádiz (ES); 2 rescued</b><br>Source: EP<br>
 
 <br>
 
