--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/12/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>went missing after small boat capsized in the Strait of Gibraltar near Cádiz (ES); 2 rescued</b><br>Source: EP<br>
+Found dead: <b>09/02/18</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, bodies retrieved in Zuwara (LY)</b><br>Source: IOM Libya<br>
 
 <br>
 
