--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 08</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after boat capsized near Didim (TR) while travelling to Europe</b><br>Source: Xinhua/NOB<br>
+Found dead: <b>11/03/15</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>found dead in boat off coast of Tantan (MA)</b><br>Source: Ansamed/MNS<br>
 
 <br>
 
