--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/06/05</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of starvation at sea while travelling to Gran Canaria (ES)</b><br>Source: ELM<br>
+Found dead: <b>06/08/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Commandan (young man)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stabbed by another Afghan at squat in Calais (FR); reportedly a reprisal attack without fatal intent</b><br>Source: CMS<br>
 
 <br>
 
