--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/05/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 1)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing, feared drowned after boat sank off Adra, Almería coast (ES); 29 survivors</b><br>Source: Humano/Publico/MUGAK/EP<br>
+Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vasu</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/DAZ/Budapestsun/ZAG<br>
 
 <br>
 
