--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/06/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Slawik C. (man, 58)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, hanged himself with kettle cord in Langenhagen Prison (DE) while facing deportation</b><br>Source: 762/IRR<br>
+Found dead: <b>27/06/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ramazan Kumluca (man, 19)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>suicide, hanged himself at Campsfield House removal centre (GB) after 3rd asylum claim was rejected</b><br>Source: TI/IRR/NCADC/BBC/PICUM/Independent<br>
 
 <br>
 
