--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/07/06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>died in explosion in minefield in Evros (GR) while trying to cross Turkish-Greek border</b><br>Source: PICUM/KI/MNS/NOB<br>
+Found dead: <b>13/02/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sadik Genc</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>disappeared, presumed dead after deportation from Bremen (DE) to Turkey</b><br>Source: ARI<br>
 
 <br>
 
