--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/00</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>reportedly drowned in shipwreck near Anjouan (KM) while trying to reach Mayotte (FR)</b><br>Source: Mayotte sans frontires<br>
+Found dead: <b>29/09/03</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>blown up in minefield while trying to cross Turkish-Greek border</b><br>Source: MNS/Flüchtlingsrat-Brandenburg/BBC<br>
 
 <br>
 
